--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "lint": "next lint"
  },
  "dependencies": {
-  "@types/react": "^17.0.30",
+  "@types/react": "^17.0.37",
   "dotenv": "^10.0.0",
-  "next": "^11.1.2",
+  "next": "^11.1.3",
   "react": "^17.0.2",
   "react-dom": "^17.0.2",
   "react-markdown": "^7.1.1"
@@ -16,8 +16,8 @@
  "devDependencies": {
   "@svgr/webpack": "^5.5.0",
   "@types/react-dom": "^17.0.11",
-  "eslint": "7.32.0",
-  "eslint-config-next": "11.1.2",
-  "typescript": "^4.4.4"
+  "eslint": "^7.32.0",
+  "eslint-config-next": "^11.1.2",
+  "typescript": "^4.5.2"
  }
 }
