--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "@types/react": "^17.0.37",
   "dotenv": "^10.0.0",
   "next": "^11.1.3",
+  "normalize.css": "^8.0.1",
   "react": "^17.0.2",
   "react-dom": "^17.0.2",
   "react-markdown": "^7.1.1"
