--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
  "dependencies": {
   "@types/react": "^17.0.37",
   "dotenv": "^10.0.0",
+  "gray-matter": "^4.0.3",
   "next": "^11.1.3",
   "normalize.css": "^8.0.1",
   "react": "^17.0.2",
@@ -19,6 +20,7 @@
   "@types/react-dom": "^17.0.11",
   "eslint": "^7.32.0",
   "eslint-config-next": "^11.1.2",
-  "typescript": "^4.5.2"
+  "typescript": "^4.5.2",
+  "ts-node": "^10.5.0"
  }
 }
