--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
   "@types/react": "^17.0.37",
   "dotenv": "^10.0.0",
   "gray-matter": "^4.0.3",
-  "next": "^11.1.3",
+  "next": "^11.1.4",
   "normalize.css": "^8.0.1",
   "react": "^17.0.2",
   "react-dom": "^17.0.2",
-  "react-markdown": "^7.1.1"
+  "react-markdown": "^7.1.2"
  },
  "devDependencies": {
   "@svgr/webpack": "^5.5.0",
   "@types/react-dom": "^17.0.11",
   "eslint": "^7.32.0",
-  "eslint-config-next": "^11.1.2",
-  "typescript": "^4.5.2",
-  "ts-node": "^10.5.0"
+  "eslint-config-next": "^11.1.4",
+  "typescript": "^4.5.5"
  }
 }
