--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "importHelpers": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "util/post-cache.js", "util/slug.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "util/slug.js"],
   "exclude": ["node_modules"]
 }
