--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "normalize.css": "^8.0.1",
   "react": "^17.0.2",
   "react-dom": "^17.0.2",
-  "react-markdown": "^7.1.2"
+  "react-markdown": "^7.1.2",
+  "react-syntax-highlighter": "^15.5.0",
+  "remark-gfm": "^3.0.1"
  },
  "devDependencies": {
   "@svgr/webpack": "^5.5.0",
   "@types/react-dom": "^17.0.11",
+  "@types/react-syntax-highlighter": "^13.5.2",
   "eslint": "^7.32.0",
   "eslint-config-next": "^11.1.4",
   "typescript": "^4.5.5"
