Create card component

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "react-dom": "^18.2.0",
   "react-markdown": "^8.0.3",
   "react-syntax-highlighter": "^15.5.0",
-  "remark-gfm": "^3.0.1"
+  "remark-gfm": "^3.0.1",
+  "uri-js": "^4.4.1"
  },
  "devDependencies": {
   "@svgr/webpack": "^6.3.1",
