--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "react-dom": "^18.2.0",
   "react-markdown": "^8.0.3",
   "react-syntax-highlighter": "^15.5.0",
+  "rehype-raw": "^6.1.1",
   "remark-gfm": "^3.0.1",
   "uri-js": "^4.4.1"
  },
