--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "uri-js": "^4.4.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.1",
     "@svgr/webpack": "^6.5.1",
     "@types/node": "^18.17.17",
     "@types/react": "^18.2.22",
