--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-markdown": "^9.0.0",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
+    "remark-directive": "^3.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-github-admonitions-to-directives": "^2.0.0",
     "uri-js": "^4.4.1"
   },
   "devDependencies": {
