--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -7,28 +8,32 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
-    "js-yaml-loader": "^1.2.2",
-    "next": "^13.5.1",
+    "highlight.js": "^11.10.0",
+    "next": "^15.0.4",
     "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.0",
-    "react-syntax-highlighter": "^15.5.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-highlight-code-lines": "^1.0.4",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
-    "remark-directive": "^3.0.0",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "remark-github-admonitions-to-directives": "^2.0.0",
+    "remark-loader": "^6.0.0",
+    "remark-math": "^6.0.0",
     "uri-js": "^4.4.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.0.1",
-    "@svgr/webpack": "^6.5.1",
-    "@types/node": "^18.17.17",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
+    "@next/bundle-analyzer": "^15.0.4",
+    "@svgr/webpack": "^8.1.0",
+    "@types/node": "^22.7.4",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "@types/react-syntax-highlighter": "^15.5.7",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^13.5.1",
-    "typescript": "^4.9.5"
+    "eslint": "^9.11.1",
+    "eslint-config-next": "^15.0.4",
+    "typescript": "^5.6.2"
   }
 }
