--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "private": true,
   "scripts": {
-	"prebuild": "node ./scripts/generate-metadata.js",
-    "dev": "next dev",
-    "build": "next build",
+    "prebuild": "node ./scripts/generate-metadata.js",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "highlight.js": "^11.10.0",
-    "next": "^15.0.4",
+    "next": "^15.3.1",
     "normalize.css": "^8.0.1",
+    "raw-loader": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
